# Sweethome

./: .gitignore  CMakeLists.txt  README.md
cmake/: add_fmt.cmake  add_googletest.cmake  add_spdlog.cmake  add_yamlcpp.cmake
conf/: devices.yml
src/: CMakeLists.txt  main.cpp  sensors.cpp  sensors.h  settings.cpp  settings.h
tests/: CMakeLists.txt  test_readYaml.cpp
tests/conf/: CMakeLists.txt  devices.yml
